# tty-tinkerwithtech

./: .dockerignore  .firebaserc  .gitignore  .last-branch  CLAUDE.md  DEPLOY.md  DEVELOPMENT.md  Dockerfile  Makefile  PRD.md  cloudbuild.yaml  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  mockup.html  prd.json  progress.txt  prometheus.yml  pyproject.toml
api/: main.py  middleware.py  rate_limit.py
archive/2026-03-15-audit-remediation/: prd.json  progress.txt
archive/2026-03-15-tty-theme-local-first/: prd.json
cache/: db.py  embeddings.py  firestore_db.py
cli/: main.py
docs/audits/: 2026-03-16-audit.md  2026-03-18-audit.md  2026-03-19-audit.md  2026-03-20-audit.md
generator/: llm.py  prompt.py  slug.py  validator.py
generator/serializers/: base.py  ghostty.py  iterm2.py
image/: extractor.py  loader.py  palette_mapper.py  phash.py
modes/: image_mode.py  prompt_mode.py
providers/: anthropic.py  base.py  gemini.py  groq.py  llamafile.py  lmstudio.py  mistral.py  ollama.py  openai.py  openai_compat.py  registry.py
security/: input_sanitizer.py  keystore.py  rate_limiter.py  secrets.py  ssrf_guard.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/artifact_registry/: main.tf  variables.tf
terraform/modules/cloud_run/: main.tf  variables.tf
terraform/modules/firestore/: variables.tf
terraform/modules/iam/: main.tf  variables.tf
terraform/modules/monitoring/: main.tf  (+2 more)
tests/: test_api.py  test_cli_install.py  test_db.py  test_image_loader.py  test_image_mode.py  test_input_sanitizer.py  test_llm.py  test_metrics_auth.py  test_prompt_mode.py  test_providers.py  test_rate_limit.py  test_sanitizer.py  test_secrets.py  test_serializers.py  test_slug.py  test_ssrf_guard.py  test_ttl_rate_limit.py  test_validator.py  test_xff_rate_limit.py
themes/: index.json
web/: gallery.html  index.html  theme.html
(+1 files in other folders)
